--- a/increment decrement button/index.html
+++ b/increment decrement button/index.html
@@ -24,6 +24,15 @@
                 <i class="fa-solid fa-plus"></i>
             </button>
         </div>
+        <div class="flex">    
+                <button onclick="addten()" class=" bg-white flex text-[#00000]  rounded-sm gap-20 place-content-evenly mx-5 p-2 px-5">
+            <i class="fa-solid fa-plus"> 10</i>
+        </button>
+        <button onclick="subten()" class=" bg-white flex text-[#00000]  rounded-sm gap-20 place-content-evenly p-2 px-5">
+            <i class="fa-solid fa-minus"> 10</i>
+        </button>
+    </div>
+
     </div>
     <script src="https://kit.fontawesome.com/ffc397e19b.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
